FPT - Bug fix v0.2

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <p class="project-description">Este projeto consiste em um catálogo de pessoas exibido em uma página web, onde as informações de cada pessoa são armazenadas como atributos data- no HTML.</p>
                                 </div>
                                 <div class="project-buttons">
-                                    <a href="https://eupane.github.io/projetos/advancedSearch/" class="demo-button" id="demo-button" target="_blank">Demo</a>
+                                    <a href="/projetos/advancedSearch/" class="demo-button" id="demo-button" target="_blank">Demo</a>
                                     <a href="https://github.com/eupane/eupane.github.io/tree/master/projetos/advancedSearch" class="source-button" id="source-button" target="_blank">Repositório</a>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                                     <p class="project-description">Este projeto apresenta uma demonstração interativa de alternância de cores em uma página web.</p>
                                 </div>
                                 <div class="project-buttons">
-                                    <a href="https://eupane.github.io/projetos/colorSwitch/" class="demo-button" id="demo-button" target="_blank">Demo</a>
+                                    <a href="/projetos/colorSwitch/index.html" class="demo-button" id="demo-button" target="_blank">Demo</a>
                                     <a href="https://github.com/eupane/eupane.github.io/tree/master/projetos/colorSwitch" class="source-button" id="source-button" target="_blank">Repositório</a>
                                 </div>
                             </div>
@@ -135,7 +135,7 @@
                                     <p class="project-description">Este projeto apresenta uma aplicação web simples que permite aos usuários alternar entre dois temas: um tema escuro e um tema claro.</p>
                                 </div>
                                 <div class="project-buttons">
-                                    <a href="https://eupane.github.io/projetos/buttonSwitch/" class="demo-button" id="demo-button" target="_blank">Demo</a>
+                                    <a href="/projetos/buttonSwitch/" class="demo-button" id="demo-button" target="_blank">Demo</a>
                                     <a href="https://github.com/eupane/eupane.github.io/tree/master/projetos/buttonSwitch" class="source-button" id="source-button" target="_blank">Repositório</a>
                                 </div>
                             </div>
