--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
                                 </div>
                                 <div class="project-buttons">
                                     <a href="/projetos/advancedSearch/" class="demo-button" id="demo-button" target="_blank">Demo</a>
-                                    <a href="https://github.com/eupane/eupane.github.io/tree/master/projetos/advancedSearch" class="source-button" id="source-button" target="_blank">Repositório</a>
+                                    <a href="https://github.com/eupane/projetos/tree/master/advancedSearch/" class="source-button" id="source-button" target="_blank">Repositório</a>
                                 </div>
                             </div>
                             <!-- Projeto: Theme Switch -->
-                            <div class="project colorSwitch">
+                            <div class="project themeSwitch">
                                 <div class="project-image"></div>
                                 <div class="project-info">
                                     <h2 class="project-title">Theme Switch</h2>
                                     <p class="project-description">Este projeto apresenta uma demonstração interativa de alternância de cores em uma página web.</p>
                                 </div>
                                 <div class="project-buttons">
-                                    <a href="/projetos/colorSwitch/index.html" class="demo-button" id="demo-button" target="_blank">Demo</a>
-                                    <a href="https://github.com/eupane/eupane.github.io/tree/master/projetos/colorSwitch" class="source-button" id="source-button" target="_blank">Repositório</a>
+                                    <a href="/projetos/themeSwitch/index.html" class="demo-button" id="demo-button" target="_blank">Demo</a>
+                                    <a href="https://github.com/eupane/projetos/tree/master/themeSwitch/" class="source-button" id="source-button" target="_blank">Repositório</a>
                                 </div>
                             </div>
                             <!-- Projeto: Button Switch -->
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="project-buttons">
                                     <a href="/projetos/buttonSwitch/" class="demo-button" id="demo-button" target="_blank">Demo</a>
-                                    <a href="https://github.com/eupane/eupane.github.io/tree/master/projetos/buttonSwitch" class="source-button" id="source-button" target="_blank">Repositório</a>
+                                    <a href="https://github.com/eupane/projetos/tree/master/buttonSwitch/" class="source-button" id="source-button" target="_blank">Repositório</a>
                                 </div>
                             </div>
                             
